# strava_web

./: .gitignore  get_oauth_code copy.py  linter.sh  pyproject.toml  requirements.txt  rxconfig.py
strava_web/: strava_web.py
strava_web/src/strava_api/get_activities_process/: activity_api_request.py  activity_fetcher.py  filter_activities.py
strava_web/src/strava_api/get_token/: get_oauth_code.py  refresh_token.py  request_credentials.py
strava_web/src/strava_api/get_token/oauth_code_process/: get_oauth_code.py  login_strava.py
strava_web/src/strava_api/tokens_process/: get_access_token.py  refresh_token.py  request_credentials.py
strava_web/src/strava_api/tokens_process/oauth_code_process/: credentials.py  extract_code.py  get_oauth_code.py  login_strava.py
strava_web/utils/: __init__.py  config.py  locators.py  logger.py  web_element_handler.py
